--- a/my_website/pictures.html
+++ b/my_website/pictures.html
@@ -1,6 +1,8 @@
 <!doctype html>
 	<html lang="en">
-	  <head>
+	   <title>Stephania's Photos</title>
+<head>
+  
 <style>
 body {margin:0;}
 
@@ -29,9 +31,9 @@ body {margin:0;}
     background-color: #ff8080;
     color: white;
 }
-    body { 
-        background-color: #ffd9cc;
-    }
+body {
+background-color: #ffd9cc;
+}
 </style>
 	    <meta charset="utf-8">
 	  </head>
@@ -41,8 +43,40 @@ body {margin:0;}
 	      <a href="index.html">Home</a>
 	      <a href="portfolio.html">Portfolio</a>
         <a class="active">Pictures</a>
+        <a href="aboutme.html">About Me</a>
        <a href="contact.html">Contact</a>
-</div>
-    <h2 style="text-align:center;">Pictures Coming Soon!<h2>
+      </div>
+  
+    <h2 style="text-align:center;">Photos & Favorites<h2>
+      <center><img src="images/wolfpack.png" height=300>
+      <br>
+      <center><p>Wolfpack Invitational -2017 Vasity Girls</p>
+      <img src="images/mclane.jpg" height=300 >
+<br>
+<p>McLane Race - 2017 JV Girls</p>
+<img src="images/actiontrack.jpg" height=300>
+<br>
+<p>2016 Track & Field</p>
+<img src="images/shsbasketball.jpg" height=400>
+<br>
+<img src="images/basketball_17.jpg" height=300>
+<br>
+<img src="images/basketball2_17.jpg" height=300>
+<br>
+<p>JV Basketball 2016-2017</p>
+<img src="images/band2016.jpg" height=300>
+<br>
+<img src="images/bandnight.jpg" height=300>
+<br>
+<p>2016-2017 Shafter Band</p>
+<img src="images/uclasax.jpg" height=300>
+<br>
+<img src="images/ucla.jpg" height=300>
+<br>
+<p>UCLA vs. Stanford Halftime Show</p>
+<img src="images/crosscountry.jpg" height=300>
+<br>
+<p>2016 Cross Country Girls</p></center>
+
 	  </body>
 	</html> 
