--- a/my_website/index.html
+++ b/my_website/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+    <title>Stephania's Home Page</title>
 <head>
+
 <style>
 body {margin:0;}
 
@@ -35,21 +37,56 @@ background-color: #ffd9cc;
 </style>
     <meta charset="utf-8">
 </head>
-<body>
+<body style="height:1500px">
 
-<div class="topnav">
-  <a class="active" href="home">Home</a>
+ <div class="topnav">
+  <a class="active" href="index.html">Home</a>
   <a href="portfolio.html">Portfolio</a>
   <a href="pictures.html">Pictures</a>
+  <a href="aboutme.html">About Me</a>
   <a href="contact.html">Contact</a>
-</div>
+ </div>
 
-<div style="text-align:center;">
+<div style="text-align:center;" >
   <h2>This is my test Home Page!</h2>
-  <p>Some content..</p>
-</div>
-    <img src="images/home.jpg" height="200">
-
+  </div>
+  
+    <center><img src="images/welcome.png" height="100"></center>
+    <br>
+        <a target="_blank" href="https://scratch.mit.edu/">
+      <img src="images/scratchlogo.png" height=80>
+    </a>
+    <p>Scratch.com</p>
+    <br>
+    <a target="blank" href="http://shafter.kernhigh.org/">
+      <img src="images/generals.jpg" height=170>
+    </a>
+    <p>High School Website</p>
+    <br>
+    <a target= "blank" href="https://www.athletic.net/CrossCountry/Athlete.aspx?AID=10400763#/L0">
+      <img src="images/shoe.png" height=170>
+    </a>
+    <p>Track & Cross Country Records</p>
+    <a target="blank" href= "https://www.spotify.com/us/">
+      <img src="images/spotify.png" height=170>
+    </a>
+    <p>Spotify.com</p>
 </body>
+<footer>
+    <script>
+  (function() {
+    var cx = '012464093449025560229:p3e0xt-8k5s';
+    var gcse = document.createElement('script');
+    gcse.type = 'text/javascript';
+    gcse.async = true;
+    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(gcse, s);
+  })();
+    </script>
+<gcse:search></gcse:search>
+</footer>
+
 </html>
+
 
