--- a/my_website/contact.html
+++ b/my_website/contact.html
@@ -29,20 +29,49 @@ body {margin:0;}
     background-color: #ff8080;
     color: white;
 }
-    body { 
-        background-color: #ffd9cc;
-    }
+body, html {
+    height: 100%;
+}
+
+.parallax {
+   
+    background-image: url("images/whitetree.jpg");
+
+       height: 70%;
+
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 </style>
 	    <meta charset="utf-8">
 	  </head>
-	  <body>
+	  <body style=background-color:#ffd9cc>
 	    
 	    <div class="topnav">
 	      <a href="index.html">Home</a>
 	      <a href="portfolio.html">Portfolio</a>
         <a href="pictures.html">Pictures</a>
+        <a href="aboutme.html">About Me</a>
        <a class="active">Contact</a>
 </div>
-    <h2 style="text-align:center;">This is my Contact Page!<h2>
+    <h2 style="text-align:center;">This is my Contact Page!</h2>
+    
+<div class="parallax"></div>
+
+<div style="height:250px;background-color:#ff8080;font-size:24px">
+    <br>
+<center><b>Stephania Ledezma</b></center>
+<center>Shafter, CA</center>
+<center>661.447.0127. (cell)</center>
+<center>stephanialedezma03@gmail.com</center>
+<center></center>
+
+
+</div>
+
+<div class="parallax"></div>
+
 	  </body>
-	</html> 
+	</html>  
