--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -64,6 +64,8 @@ body, html {
       <img src="images/portfolio.jpg" height="150">
     <br>
       <p>Coming Soon...</p>
+	            <br>
+  <p>Click here to view the animation Aimee Mondragon and I made!</p>
     </center>
     
     <div class="parallax"></div>
