--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -65,7 +65,7 @@ body, html {
     <br>
       <p>Coming Soon...</p>
 	            <br>
-  <p>Click here to view the animation Aimee Mondragon and I made!</p>
+      <p><a href="https://scratch.mit.edu/projects/176586204/">Click here to view the animation Aimee Mondragon and I made!</a></p>
     </center>
     
     <div class="parallax"></div>
