--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -64,6 +64,8 @@ body, html {
       <img src="images/portfolio.jpg" height="150">
     <br>
       <p><a href="https://scratch.mit.edu/projects/176586204/">Click here to view the animation Aimee Mondragon and I made!</a></p>
+	         <br>
+      <p><a href="https://scratch.mit.edu/projects/171980071/">Play my first game on Scratch </a></p>
     </center>
     
     <div class="parallax"></div>
