--- a/my_website/portfolio.html
+++ b/my_website/portfolio.html
@@ -62,10 +62,17 @@ body, html {
       <div class="parallax"></div>
       <center>
       <img src="images/portfolio.jpg" height="150">
-    <br>
-      <p><a href="https://scratch.mit.edu/projects/176586204/">Click here to view the animation Aimee Mondragon and I made!</a></p>
-	         <br>
-      <p><a href="https://scratch.mit.edu/projects/171980071/">Play my first game on Scratch </a></p>
+          <br>
+      <font size="5">
+      <p><a target="blank" href="https://scratch.mit.edu/projects/176586204/">Click here to view the animation Aimee Mondragon and I made!</a></p>
+      <br>
+      <p><a target="blank" href="https://scratch.mit.edu/projects/171980071/">Play my first game on Scratch </a></p>
+      <br>
+      <a target="blank" href="https://repl.it/@stephanial/The-Hunt">
+          <img src="images/hauntedhouse.jpg" height=150>
+      </a>
+      <p>View Eloisa Sepulveda's and My Haunted House Story</p>
+      </font>
     </center>
     
     <div class="parallax"></div>
